list display & sidebar

--- a/server/README.me
+++ b/server/README.me
@@ -1,8 +1,11 @@
 ## next steps 
 
-- display data in Item component
+- style sidebar (dropdown, icon)
+- filter functions
 
-
+- quick add pop-up 
+- cart 
+- checkout
 
 
 ## Things I've learned
